# multilingual-monorepo

./: .bazelrc  LICENSE  README.md  WORKSPACE  bazel-bin  bazel-multilingual-monorepo  bazel-out  bazel-testlogs  serverless.yaml
golang_restapi/: BUILD  main.go
python_microservices/: BUILD  model.py  pyproject.toml  razorpay.py  server.py
